--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ DFCX <!doctype html>
     
     <div class="hero-left">
       <div class="logos">
-        <img src="../img/Logos/LOGO SADIAB1a.png" alt="Logo SADIAB" />
-        <img src="../img/Logos/LOGO ADWG1.png" alt="Logo ADWG" />
+        <img src="./img/Logos/LOGO SADIAB1a.png" alt="Logo SADIAB" />
+        <img src="./img/Logos/LOGO ADWG1.png" alt="Logo ADWG" />
       </div>
 
       <h1 class="title">Journée Médicale 
@@ -230,7 +230,7 @@ Diabètes et Ramadan</h1>
     <aside class="hero-right">
       <div class="card">
         <div class="qr">
-          <img src="../QRCode/QR Code Diabète et Ramadan_Pré_inscription.png" alt="QR Inscription" />
+          <img src="./QRCode/QR Code Diabète et Ramadan_Pré_inscription.png" alt="QR Inscription" />
           <div style="flex:1">
             <p style="margin:0 0 10px 0; font-size:14px"><strong>Pré‑inscription</strong>
 <small>Places limitées</small></p>
@@ -241,11 +241,11 @@ Diabètes et Ramadan</h1>
 
       <div class="card">
         <div class="qr">
-          <img src="../QRCode/Program DIABRAM.jpg" alt="QR Programme" />
+          <img src="./QRCode/Program DIABRAM.jpg" alt="QR Programme" />
           <div style="flex:1">
             <p style="margin:0 0 10px 0; font-size:14px"><strong>Programme</strong>
 <small>Télécharger PDF</small></p>
-            <a class="btn secondary" href="G:\Diabete et Ramadan\BLOG\Conférence Schedule DiabRam7.pdf" download>Télécharger le programme</a>
+            <a class="btn secondary" href="./Programme/Conférence Schedule DiabRam7.pdf" download>Télécharger le programme</a>
           </div>
         </div>
       </div>
@@ -372,4 +372,5 @@ Diabètes et Ramadan</h1>
 </script>
 
 </body>
+
 </html>
