Update Poster Depistage Arabe Francais .html

--- a/Poster Depistage Arabe Francais .html
+++ b/Poster Depistage Arabe Francais .html
@@ -1125,15 +1125,15 @@
             </div>
             <div class="partners-grid">
                 <div class="partner-item">
-                    <img src="../img/Logos/Logo EPHnew1.png" alt="EPH Terrichine Ibrahim" class="partner-logo large">
+                    <img src="./img/Logos/Logo EPHnew1.png" alt="EPH Terrichine Ibrahim" class="partner-logo large">
                     <span class="partner-name">EPH Terrichine Ibrahim</span>
                 </div>
                 <div class="partner-item">
-                    <img src="../img/Logos/LOGO ADWG1.png" alt="ADWG" class="partner-logo large">
+                    <img src="./img/Logos/LOGO ADWG1.png" alt="ADWG" class="partner-logo large">
                     <span class="partner-name">ADWG</span>
                 </div>
                 <div class="partner-item">
-                    <img src="../img/Logos/Logo Wilaya Ghardaia1.png" alt="Wilaya de Ghardaia" class="partner-logo">
+                    <img src="./img/Logos/Logo Wilaya Ghardaia1.png" alt="Wilaya de Ghardaia" class="partner-logo">
                     <span class="partner-name">Wilaya de Ghardaia</span>
                 </div>
             </div>
@@ -1143,7 +1143,7 @@
         <footer class="footer-premium">
             <!-- Logo SADIAB circulaire -->
             <div class="sadiab-footer-logo">
-                <img src="../img/Logos/LOGO SADIAB1a.png" alt="SADIAB">
+                <img src="./img/Logos/LOGO SADIAB1a.png" alt="SADIAB">
             </div>
             
             <div class="footer-content-premium">
@@ -1167,3 +1167,4 @@
 </body>
 
 </html>
+
