--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ DFCX <!doctype html>
 
     .hero-left { flex: 1; z-index: 2; }
 
-    .logos { display: flex; gap: 20px; align-items: center; margin-bottom: 25px; }
-    .logos img { height: 85px; width: auto; filter: drop-shadow(0 4px 8px rgba(0,0,0,0.1)); transition: 0.3s; }
+    .logos { display: flex; align-items: center; margin-bottom: 25px; }
+    .logos img { height: 85px; width: 85px; filter: drop-shadow(0 4px 8px rgba(0,0,0,0.1)); transition: 0.3s; }
     .logos img:hover { transform: scale(1.05); }
 
     .title {
@@ -222,6 +222,7 @@ DFCX <!doctype html>
         <img src="./img/Logos/LOGO SADIAB1a.png" alt="Logo SADIAB" />
         <img src="./img/Logos/LOGO ADWG1.png" alt="Logo ADWG" />
         <img src="./img/Logos/Logo Wilaya Ghardaia1.png" alt="Logo Ghardaïa" />
+        <img src="./img/Logos/Logo EPHnew1.png" alt="Logo EPHnew" />
       </div>
 
       <h1 class="title">Journée Médicale 
@@ -384,5 +385,6 @@ Diabètes et Ramadan</h1>
 </body>
 
 </html>
+
 
 
