--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ DFCX <!doctype html>
       <div class="logos">
         <img src="./img/Logos/LOGO SADIAB1a.png" alt="Logo SADIAB" />
         <img src="./img/Logos/LOGO ADWG1.png" alt="Logo ADWG" />
-        <img src="./img/Logos/Logo Wilaya Ghardaia1.png" alt="Logo Ghardaïa" />
+        <img src="./img/Logos/Logo_Wilaya_Ghardaia1.png" alt="Logo Ghardaïa" />
         <img src="./img/Logos/Logo EPHnew1.png" alt="Logo EPHnew" />
       </div>
 
@@ -450,6 +450,7 @@ track.innerHTML += track.innerHTML;
 </body>
 
 </html>
+
 
 
 
