--- a/index.html
+++ b/index.html
@@ -248,10 +248,15 @@ DFCX <!doctype html>
       display: block;
       margin-top: 10px;
     }
+   .logos{
+    flex-wrap: wrap;
+    column-gap: 80px;
+   }
   .countdown{
       flex-wrap: wrap;
       gap: 30px;
     }
+          
 
 
 }
@@ -450,6 +455,7 @@ track.innerHTML += track.innerHTML;
 </body>
 
 </html>
+
 
 
 
